# CodePractice

./: .gitignore  CMakeLists.txt  README.md
include/: code_caprice.h  headers.h  real_question.h
src/: code_caprice.cpp  main.cpp  real_question.cpp
